# status-service

./: .gitignore  .travis.yml  Demo.hs  Dockerfile  Main.hs  Makefile  README.md  gulpfile.js  package.json  status-service.cabal  test.hs  tsd.json  tslint.json
Health/: Data.hs  Data_test.hs
Service/: Request.hs  Request_test.hs  URIMapper.hs  URIMapper_test.hs  Unittests.hs
server/: gulpfile.js  package.json
server/src/: index.ts
server/src/routes/: graph.ts
server/src/services/: addable.ts  service.ts
server/src/util/: interweave.ts
server/test/services/: server_test.ts
src/: index.ts
src/graph/: graphbuilder.ts
src/routes/: health.ts
src/services/: observer.ts  service.ts  servicehealth.ts
src/util/: http.ts  interweave.ts  server.ts
test/: test.ts
test/graph/: graphbuilder_test.ts
test/services/: observer_test.ts  server_test.ts
test/util/: interweave_test.ts  server_test.ts
webapp/: karma.conf.js  package.json  tsd.json
webapp/app/: bootstrap.ts  index.html
webapp/app/components/about/: about.ts  about_spec.ts
webapp/app/services/: graph_service.ts  health_service.ts  health_service_spec.ts
webapp/app/types/: dependency_graph.ts  service_health.ts
webapp/app/util/: base_poll_component.ts
webapp/tools/: config.ts  utils.ts
webapp/tools/tasks/: build.bundles.ts  build.deps.ts  build.docs.ts  build.html_css.prod.ts  build.img.dev.ts  build.index.ts  build.js.dev.ts  build.js.prod.ts  build.sass.dev.ts  build.test.ts  check.versions.ts  clean.ts  karma.start.ts  npm.ts  serve.docs.ts  server.start.ts  tsd.ts  tslint.ts  watch.dev.ts  watch.serve.ts  watch.test.ts
webapp/tools/utils/: server.ts  tasks_tools.ts  template-injectables.ts  template-locals.ts
(+15 files in other folders)
